rename page.css 6

--- a/reviews.html
+++ b/reviews.html
@@ -1181,7 +1181,7 @@
                                       <button
                                         id="audio_or_video_improvement_tag"
                                         name="audio_or_video_improvement_tag"
-                                        class="_np90lm"
+                                        class="guest-req__category-option-btn"
                                         aria-pressed="false"
                                         type="button"
                                       >
@@ -1196,7 +1196,7 @@
                                       <button
                                         id="accuracy_improvement_tag"
                                         name="accuracy_improvement_tag"
-                                        class="_np90lm"
+                                        class="guest-req__category-option-btn"
                                         aria-pressed="false"
                                         type="button"
                                       >
@@ -1211,7 +1211,7 @@
                                       <button
                                         id="structure_or_style_improvement_tag"
                                         name="structure_or_style_improvement_tag"
-                                        class="_np90lm"
+                                        class="guest-req__category-option-btn"
                                         aria-pressed="false"
                                         type="button"
                                       >
@@ -1226,7 +1226,7 @@
                                       <button
                                         id="price_or_value_improvement_tag"
                                         name="price_or_value_improvement_tag"
-                                        class="_np90lm"
+                                        class="guest-req__category-option-btn"
                                         aria-pressed="false"
                                         type="button"
                                       >
@@ -1241,7 +1241,7 @@
                                       <button
                                         id="something_else_improvement_tag"
                                         name="something_else_improvement_tag"
-                                        class="_np90lm"
+                                        class="guest-req__category-option-btn"
                                         aria-pressed="false"
                                         type="button"
                                       >
