--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1004,7 +1004,7 @@
               </div>
               <main id="site-content">
                 <div class="site-content__page-wrapper">
-                  <div class="_4znzk04" id="lyt-page-container">
+                  <div class="site-content__page-wrapper-main" id="lyt-page-container">
                     <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
@@ -1305,21 +1305,21 @@
                       </div>
                     </section>
                   </div>
-                  <div class="_tz7s061">
-                    <div class="_eqmd9g">
+                  <div class="site-content__page-wrapper-right">
+                    <div class="site-content__page-wrapper-right-wrapper">
                       <div>
-                        <div id="support-panel-header" class="_1ha6v47">
-                          <h2 class="_1ftacon">Tips</h2>
+                        <div id="support-panel-header" class="site-content__page-wrapper-right-header">
+                          <h2 class="site-content__page-right-header-text">Tips</h2>
                         </div>
                       </div>
-                      <div class="_c143gl" tabindex="0" aria-label="Tips">
-                        <div class="_1loiqjs">
+                      <div class="site-content__page-right-tips" tabindex="0" aria-label="Tips">
+                        <div class="site-content__page-right-tips-wrapper">
                           <div class="guest-container__text-header">
                             Popular start times for guests around the world
                             based on bookings in the last 14 days
                           </div>
-                          <div class="_1htwqzi">
-                            <div class="_r8kijh">
+                          <div class="site-content__page-right-dos-donts">
+                            <div class="site-content__dos-donts-list">
                               <div class="_1ahkveq">
                                 <div class="_3mnosr">3 AM</div>
                                 <div class="_1wvjtiw">3.6X more than avg</div>
@@ -1334,7 +1334,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_1htwqzi">
+                          <div class="site-content__page-right-dos-donts">
                             Online Experiences are booked by guests who live in
                             a variety of different time zones.
                           </div>
