--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1004,7 +1004,7 @@
               </div>
               <main id="site-content">
                 <div class="site-content__page-wrapper">
-                  <div class="_4znzk04" id="lyt-page-container">
+                  <div class="site-content__page-wrapper-main" id="lyt-page-container">
                     <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
@@ -1481,19 +1481,19 @@
                       </div>
                     </section>
                   </div>
-                  <div class="_tz7s061">
-                    <div class="_eqmd9g">
+                  <div class="site-content__page-wrapper-right">
+                    <div class="site-content__page-wrapper-right-wrapper">
                       <div>
-                        <div id="support-panel-header" class="_1ha6v47">
-                          <h2 class="_1ftacon">Tips</h2>
+                        <div id="support-panel-header" class="site-content__page-wrapper-right-header">
+                          <h2 class="site-content__page-right-header-text">Tips</h2>
                         </div>
                       </div>
-                      <div class="_c143gl" tabindex="0" aria-label="Tips">
-                        <div class="_1loiqjs">
+                      <div class="site-content__page-right-tips" tabindex="0" aria-label="Tips">
+                        <div class="site-content__page-right-tips-wrapper">
                           <h3 class="_f68iwe">Your potential earnings</h3>
                           <h4 class="guest-container__text-header">Public groups</h4>
-                          <div class="_1htwqzi">
-                            <div class="_r8kijh">
+                          <div class="site-content__page-right-dos-donts">
+                            <div class="site-content__dos-donts-list">
                               <div
                                 class="main-content__details-button-wrapper"
                                 data-testid="individual_rate_half"
@@ -1570,7 +1570,7 @@
                             </div>
                           </div>
                           <h4 class="guest-container__text-header">Private groups</h4>
-                          <div class="_1htwqzi">
+                          <div class="site-content__page-right-dos-donts">
                             <div class="hero-banner__description">
                               If 5 adults are in a group, you will earn ₹98.40
                               for a private group.
