--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1004,7 +1004,7 @@
               </div>
               <main id="site-content">
                 <div class="site-content__page-wrapper">
-                  <div class="_4znzk04" id="lyt-page-container">
+                  <div class="site-content__page-wrapper-main" id="lyt-page-container">
                     <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
@@ -1071,16 +1071,16 @@
                             </div>
                             <section>
                               <div class="_7e300w">
-                                <div class="_4mmmhh">
+                                <div class="site-content__page-main-option-wrapper">
                                   <label
                                     class="form-floating__control"
                                     for="guest_requirements_min_age_select"
                                     ><div>
                                       <div class="_d8a74u">Minimum age</div>
                                     </div>
-                                    <div class="_1djpu7h">
+                                    <div class="site-content__page-main-option-select-wrapper">
                                       <select
-                                        class="_pk111c"
+                                        class="site-content__page-main-option-select"
                                         id="guest_requirements_min_age_select"
                                       >
                                         <option value="21">21</option>
@@ -1136,7 +1136,7 @@
                                   attend with their legal guardian.
                                 </div>
                               </div>
-                              <div class="_1ttk9u5">
+                              <div class="site-content__page-main-option-label">
                                 <div
                                   id="guest_requirements_infant_can_attend"
                                   aria-disabled="false"
@@ -1331,7 +1331,7 @@
                                       during your entire experience.
                                     </div>
                                   </div>
-                                  <div class="_1scyp6q">
+                                  <div class="guest-req__category-option">
                                     <button
                                       data-testid="Tag:4605"
                                       class="getting_set_up_improvement_btn"
@@ -1347,7 +1347,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:4606"
-                                      class="_np90lm"
+                                      class="guest-req__category-option-btn"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1360,7 +1360,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:4607"
-                                      class="_np90lm"
+                                      class="guest-req__category-option-btn"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1373,7 +1373,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:6462"
-                                      class="_np90lm"
+                                      class="guest-req__category-option-btn"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1407,7 +1407,7 @@
                                       be to take your activity.
                                     </div>
                                   </div>
-                                  <div class="_1scyp6q">
+                                  <div class="guest-req__category-option">
                                     <button
                                       data-testid="Tag:4790"
                                       class="getting_set_up_improvement_btn"
@@ -1423,7 +1423,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:4791"
-                                      class="_np90lm"
+                                      class="guest-req__category-option-btn"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1436,7 +1436,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:4792"
-                                      class="_np90lm"
+                                      class="guest-req__category-option-btn"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1449,7 +1449,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:179"
-                                      class="_np90lm"
+                                      class="guest-req__category-option-btn"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1463,8 +1463,8 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_n3t7h5">
-                                  <div class="_1ku5k6q">
+                                <div class="booking-setting__suggestion">
+                                  <div class="booking-setting__suggestion-wrapper">
                                     <svg
                                       viewBox="0 0 24 24"
                                       role="presentation"
@@ -1565,26 +1565,26 @@
                       </div>
                     </section>
                   </div>
-                  <div class="_tz7s061">
-                    <div class="_eqmd9g">
+                  <div class="site-content__page-wrapper-right">
+                    <div class="site-content__page-wrapper-right-wrapper">
                       <div>
-                        <div id="support-panel-header" class="_1ha6v47">
-                          <h2 class="_1ftacon">Tips</h2>
+                        <div id="support-panel-header" class="site-content__page-wrapper-right-header">
+                          <h2 class="site-content__page-right-header-text">Tips</h2>
                         </div>
                       </div>
-                      <div class="_c143gl" tabindex="0" aria-label="Tips">
-                        <div class="_1loiqjs">
-                          <div class="_1htwqzi">
-                            <div class="_1098j4y">
-                              <h3 class="_19bx90y">Do</h3>
+                      <div class="site-content__page-right-tips" tabindex="0" aria-label="Tips">
+                        <div class="site-content__page-right-tips-wrapper">
+                          <div class="site-content__page-right-dos-donts">
+                            <div class="site-content__dos-donts-header">
+                              <h3 class="site-content__dos-donts-header-h3">Do</h3>
                             </div>
-                            <div class="_r8kijh">
+                            <div class="site-content__dos-donts-list">
                               <div style="margin-bottom: 24px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1617,7 +1617,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Remember that people might book spots for
                                       multiple guests, across multiple ages and
@@ -1628,10 +1628,10 @@
                               </div>
                               <div style="margin-bottom: 24px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1664,7 +1664,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Be honest about any age, exertion, or
                                       skill limits need to participate
@@ -1674,10 +1674,10 @@
                               </div>
                               <div style="margin-bottom: 24px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1710,7 +1710,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Make sure that any child who joins is
                                       accompanied by an adult
@@ -1720,10 +1720,10 @@
                               </div>
                               <div style="margin-bottom: 24px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1756,7 +1756,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Tell guests if there’s anything they need
                                       to read or prepare before your experience
@@ -1766,10 +1766,10 @@
                               </div>
                               <div style="margin-bottom: 0px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1802,7 +1802,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Mention that online experiences are best
                                       when they’re interactive and the guests
@@ -1813,17 +1813,17 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_1htwqzi">
-                            <div class="_1098j4y">
-                              <h3 class="_19bx90y">Don't</h3>
+                          <div class="site-content__page-right-dos-donts">
+                            <div class="site-content__dos-donts-header">
+                              <h3 class="site-content__dos-donts-header-h3">Don't</h3>
                             </div>
-                            <div class="_r8kijh">
+                            <div class="site-content__dos-donts-list">
                               <div style="margin-bottom: 24px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1856,7 +1856,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Expect that all guests will have the same
                                       skill level or expertise
@@ -1866,10 +1866,10 @@
                               </div>
                               <div style="margin-bottom: 24px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1902,7 +1902,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Include physical requirements that put
                                       people’s safety at risk
@@ -1912,10 +1912,10 @@
                               </div>
                               <div style="margin-bottom: 24px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1948,7 +1948,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Select a high activity or skill level
                                       without outlining specifics or explaining
@@ -1959,10 +1959,10 @@
                               </div>
                               <div style="margin-bottom: 0px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div
-                                        class="_1072yl6"
+                                        class="site-content__dos-donts-icon-wrapper"
                                         style="
                                           width: 20px;
                                           height: 20px;
@@ -1995,7 +1995,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Mislead guests about accessibility or
                                       adaptations you can or can’t make
