--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1004,7 +1004,7 @@
               </div>
               <main id="site-content">
                 <div class="site-content__page-wrapper">
-                  <div class="_4znzk04" id="lyt-page-container">
+                  <div class="site-content__page-wrapper-main" id="lyt-page-container">
                     <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
@@ -1158,8 +1158,8 @@
                                   </span>
                                 </div>
                               </div>
-                              <div class="_n3t7h5">
-                                <div class="_1ku5k6q">
+                              <div class="booking-setting__suggestion">
+                                <div class="booking-setting__suggestion-wrapper">
                                   <svg
                                     viewBox="0 0 24 24"
                                     role="presentation"
@@ -1407,20 +1407,20 @@
                       </div>
                     </section>
                   </div>
-                  <div class="_tz7s061">
-                    <div class="_eqmd9g">
+                  <div class="site-content__page-wrapper-right">
+                    <div class="site-content__page-wrapper-right-wrapper">
                       <div>
-                        <div id="support-panel-header" class="_1ha6v47">
-                          <h2 class="_1ftacon">Tips</h2>
+                        <div id="support-panel-header" class="site-content__page-wrapper-right-header">
+                          <h2 class="site-content__page-right-header-text">Tips</h2>
                         </div>
                       </div>
-                      <div class="_c143gl" tabindex="0" aria-label="Tips">
-                        <div class="_1loiqjs">
-                          <div class="_1htwqzi">
-                            <div class="_r8kijh">
+                      <div class="site-content__page-right-tips" tabindex="0" aria-label="Tips">
+                        <div class="site-content__page-right-tips-wrapper">
+                          <div class="site-content__page-right-dos-donts">
+                            <div class="site-content__dos-donts-list">
                               <div style="margin-bottom: 24px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div style="margin-top: 8px">
                                         <svg
@@ -1446,7 +1446,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Remember that shorter windows lead to more
                                       bookings
@@ -1456,7 +1456,7 @@
                               </div>
                               <div style="margin-bottom: 0px">
                                 <div class="flex">
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div style="margin-right: 16px">
                                       <div style="margin-top: 8px">
                                         <svg
@@ -1482,7 +1482,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1t2q299c">
+                                  <div class="site-content__dos-donts-icon">
                                     <div>
                                       Try setting your cutoff time to 0 hours
                                       since the online format makes it’s easier
